--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,26 @@
 {
-    "name": "jugalkishoredots/active",
-    "description": "The helper class for Laravel applications to get active class base on current route",
-    "license": "MIT",
-    "version": "1.1",
-    "authors": [
-        {
-            "name": "Jugal Kishore",
-            "email": "jugal.kishore@dotsquares.com"
-        }
-    ],
-    "require": {
-        
+  "name": "jugalkishoredots/active",
+  "description": "The helper class for Laravel applications to get active class base on current route",
+  "license": "MIT",
+  "version": "1.1",
+  "authors": [
+    {
+      "name": "Jugal Kishore",
+      "email": "jugal.kishore@dotsquares.com"
+    }
+  ],
+  "require": {},
+  "autoload": {
+    "psr-4": {
+      "Dotsquares\\Active\\": "src/"
     },
-    "autoload": {
-        "psr-4": {
-            "Dotsquares\\Active\\": "src/"
-        },
-        "files": [
-          "src/helpers.php"
-        ]
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "extra": {
+    "files": [
+      "src/helpers.php"
+    ]
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "extra": {
     "laravel": {
       "providers": [
         "Dotsquares\\Active\\ActiveServiceProvider"
